# playstation-store-api2-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  go.mod  playstation-store-api2.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  playstation-store-api2.rockspec  playstation-store-api2_sdk.lua  (+1 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  playstationstoreapi2_sdk.py  playstationstoreapi2_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  helpers.py  result.py  spec.py  utility_type.py
py/entity/: container_entity.py
py/feature/: audit_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  netsim_feature.py  proxy_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_container_direct.py  test_container_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_init.py  fetcher.py  make_error.py  make_options.py  make_point.py  make_request.py  make_result.py  make_spec.py  prepare_auth.py  prepare_method.py  prepare_path.py  prepare_query.py  register.py  result_body.py  result_headers.py  transform_response.py
(+414 files in other folders)
